2000-12-05  Will Cohen  <wcohen@redhat.com>

	* decl.c (finish_case_label): Cleared
	more_cleanups_ok in surrounding function scopes.
	(define_label): Likewise.

2000-12-05  Nathan Sidwell  <nathan@codesourcery.com>

	* cp-tree.h (IDENTIFIER_VIRTUAL_P): Document.
	(get_matching_virtual): Remove.
	(look_for_overrides): Declare new function.
	* decl.c (grokfndecl): Don't set IDENTIFIER_VIRTUAL_P or
	DECL_VINDEX here.
	* class.c (check_for_override): Move base class iteration code
	to look_for_overrides.
	* search.c (next_baselink): Remove.
	(get_virtuals_named_this): Remove.
	(get_virtual_destructor): Remove.
	(tree_has_any_destructors_p): Remove.
	(struct gvnt_info): Remove.
	(check_final_overrider): Remove `virtual' from error messages.
	(get_matching_virtuals): Remove. Move functionality to ...
	(look_for_overrides): ... here, and ...
	(look_for_overrides_r): ... here. Set DECL_VIRTUAL_P, if found
	to be overriding.

2000-12-05  Nathan Sidwell  <nathan@codesourcery.com>

	* typeck.c (get_delta_difference): If via a virtual base,
	return zero.
	* cvt.c (cp_convert_to_pointer): If via a virtual base, do no
	adjustment.

2000-12-04  Richard Henderson  <rth@redhat.com>

	* error.c (dump_tree): Use output_add_string not OB_PUTS.

2000-12-04  Jason Merrill  <jason@redhat.com>

	* mangle.c (write_type): Mangle VECTOR_TYPE with "U8__vector".
	(write_builtin_type): Pass intSI_type_node and the like through 
	type_for_mode.
	* method.c (process_overload_item): Mangle VECTOR_TYPEs with 'o'.
	Pass intSI_type_node and the like through type_for_mode.
	* decl2.c (arg_assoc_type): Handle VECTOR_TYPE like COMPLEX_TYPE.
	* pt.c (tsubst, unify): Likewise.
	* tree.c (walk_tree): Likewise.
	* error.c (dump_type): Likewise.
	(dump_type_prefix, dump_type_suffix): Don't bother with VECTOR_TYPE.
	
	* Make-lang.in: Tweak top comment for emacs.
	(cp/TAGS): Restore.

	* except.c (expand_throw): Use push_throw_library_fn for _Jv_Throw.

	* pt.c (tsubst_decl): Call clone_function_decl here.